--- a/package.json
+++ b/package.json
@@ -12,10 +12,7 @@
     "build": "npm run build-ts && npm run tslint",
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
-    "test": "jest --forceExit --coverage --verbose",
-    "test:watch": "jest --watchAll",
+    "test": "NODE_ENV=test mocha --timeout 10000 dist/__tests__/**/*.js",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "tslint:fix": "tslint -c tslint.json -p tsconfig.json --fix",
     "debug": "npm run build && npm run watch-debug",
@@ -38,6 +35,8 @@
     "@babel/core": "^7.0.0-beta.56",
     "@types/bcryptjs": "^2.4.1",
     "@types/body-parser": "^1.17.0",
+    "@types/chai": "^4.1.5",
+    "@types/chai-http": "^3.0.5",
     "@types/cors": "^2.8.4",
     "@types/cypress": "^1.1.3",
     "@types/dotenv": "^4.0.3",
@@ -52,6 +51,7 @@
     "@types/jsonwebtoken": "^7.2.8",
     "@types/lodash": "^4.14.116",
     "@types/lusca": "^1.5.0",
+    "@types/mocha": "^5.2.5",
     "@types/mongoose": "^5.2.9",
     "@types/mongoose-unique-validator": "^1.0.1",
     "@types/morgan": "^1.7.35",
@@ -64,6 +64,8 @@
     "babel-jest": "^23.4.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "chai": "^4.1.2",
+    "chai-http": "^4.2.0",
     "concurrently": "^3.6.1",
     "cors": "^2.8.4",
     "css-loader": "^1.0.0",
@@ -78,6 +80,7 @@
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "lusca": "^1.6.1",
+    "mocha": "^5.2.0",
     "mongoose": "^5.2.9",
     "mongoose-unique-validator": "^2.0.1",
     "node-sass": "^4.9.2",
@@ -86,7 +89,7 @@
     "passport-local": "^1.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
-    "supertest": "^3.1.0",
+    "supertest": "^3.3.0",
     "ts-jest": "^23.1.3",
     "tslint": "^5.11.0",
     "typescript": "^3.0.1",
