--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   web:
-    container_name: min-ts-node
+    container_name: dummy-banking
     image: node:8.11.1
     working_dir: /app
     environment:
